fix for long text with no space overflow css

--- a/src/style.css
+++ b/src/style.css
@@ -190,6 +190,7 @@
   margin-left: auto;
   font-weight: 300;
   font-size: 14px;
+  word-break: break-all;
 }
 
 #agent-chat-bubble {
@@ -206,6 +207,7 @@
   margin-right: auto;
   font-weight: 300;
   font-size: 14px;
+  word-break: break-all;
 }
 
 /* popup */
@@ -236,6 +238,7 @@
   background: #fff;
   box-shadow: rgba(0, 0, 0, 0.1) 0px 0px 10px;
   min-height: 20px;
+  height: auto;
   width: fit-content;
   max-width: 90%;
   border: 1px solid #dfdfdf;
@@ -247,6 +250,7 @@
   padding: 15px;
   margin-bottom: 4px;
   margin-top: 4px;
+  word-break: break-all;
 }
 
 /* ------------------ Responsiveness --------------- */
